--- a/PrivateSocial.ApiService/PrivateSocial.ApiService.csproj
+++ b/PrivateSocial.ApiService/PrivateSocial.ApiService.csproj
@@ -6,18 +6,22 @@
         <Nullable>enable</Nullable>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <NoWarn>$(NoWarn);1591</NoWarn>
+        <UserSecretsId>a1b2c3d4-e5f6-7890-abcd-ef1234567890</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\PrivateSocial.ServiceDefaults\PrivateSocial.ServiceDefaults.csproj"/>
+        <ProjectReference Include="..\PrivateSocial.ServiceDefaults\PrivateSocial.ServiceDefaults.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.2"/>
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.2"/>
-        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.2"/>
-        <PackageReference Include="Aspire.Pomelo.EntityFrameworkCore.MySql" Version="9.0.0"/>
-        <PackageReference Include="BCrypt.Net-Next" Version="4.0.3"/>
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.2" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.2" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.7" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.7" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.7" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.2" />
+        <PackageReference Include="Aspire.Pomelo.EntityFrameworkCore.MySql" Version="9.0.0" />
+        <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.11">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
